style(background): fix scroll and height issues on mobile viewport background by using only full container height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,6 @@ html {
 }
 
 html, body {
-  position: fixed;
-  overflow: scroll;
   height: 100%;
   color: var(--color-fg);
 }
